--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
                 <div class="info-hero">
                     <div class="word">
-                        <p><img src="/img/star.png" alt="star">Curioso</p>
-                        <p>ㅤㅤㅤ<img src="/img/star.png" alt="star">Criativo</p>
-                        <p>ㅤㅤㅤㅤㅤ<img src="/img/star.png" alt="star">Lógico</p>
+                        <p><img src="img/star.png" alt="star">Curioso</p>
+                        <p>ㅤㅤㅤ<img src="img/star.png" alt="star">Criativo</p>
+                        <p>ㅤㅤㅤㅤㅤ<img src="img/star.png" alt="star">Lógico</p>
                     </div>
                     
                     <img src="/img/avatar.png" alt="Avatar do Máyron Andrei">
@@ -117,8 +117,8 @@
         <section id="about">            
             <div class="about-container">                
                 <div>
-                    <img src="/img/perfil.png" alt="foto de perfil" class="img1">
-                    <img src="/img/perfil2.png" alt="foto de perfil" class="img2">
+                    <img src="img/perfil.png" alt="foto de perfil" class="img1">
+                    <img src="img/perfil2.png" alt="foto de perfil" class="img2">
                 </div> 
 
                 <div class="title-about">
@@ -131,7 +131,7 @@
                 </div>             
                 
                 <div>
-                    <img src="/img/perfil2.png" alt="foto de perfil" class="img3">
+                    <img src="img/perfil2.png" alt="foto de perfil" class="img3">
                 </div>
             </div>
         </section>
