--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p>ㅤㅤㅤㅤㅤ<img src="img/star.png" alt="star">Lógico</p>
                     </div>
                     
-                    <img src="/img/avatar.png" alt="Avatar do Máyron Andrei">
+                    <img src="img/avatar.png" alt="Avatar do Máyron Andrei">
 
                     <div class="hero-btn">
                         <button>
